--- a/k8s/overlays/prod/kustomization.yaml
+++ b/k8s/overlays/prod/kustomization.yaml
@@ -13,7 +13,7 @@ patchesStrategicMerge:
       spec:
         containers:
           - name: yamlamadingdong
-            imagePullPolicy: IfNotPresent
+            imagePullPolicy: Always
           - name: auto-ssl
             imagePullPolicy: IfNotPresent
 
